--- a/css/style.css
+++ b/css/style.css
@@ -379,20 +379,61 @@ html, body{ height: 100%; }
 }
 
 /*------------------------------------------------------------------
+    VIDEO AREA
+-------------------------------------------------------------------*/
+#videowrapper{  
+    position: relative;
+    overflow: hidden;
+} 
+
+#fullScreenDiv{
+    min-height: 100%; 
+    height: 100vh;
+    width: 100vw;
+    padding:0;
+    margin: 0;
+    background-color: gray;
+    position: relative;
+}
+
+#video{    
+    width: 100vw; 
+    height: auto;
+    margin: auto;
+    display: block;
+}
+@media (min-aspect-ratio: 16/9) {
+  #video{
+    width: 100vw; 
+    height:auto;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  #video {
+    height: 100vh; 
+    width:auto;
+    margin-left: 50vw;
+    transform: translate(-50%);
+  }
+}
+
+#videoMessage{
+    width: 100%; 
+    height: 100%;
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+/*------------------------------------------------------------------
     BANNER AREA
 -------------------------------------------------------------------*/
 
-.banner{
-	background:url(news-images\Alathai-v2.mp4) no-repeat center top;
-	background-attachment:fixed;
-	background-size:cover;
-	height:100vh;
-	min-height:100%;
-}
-
-.banner .container, .banner .banner-static, .banner .col-lg-12 {
-    height: 100%;
-}
 .banner-text {
     display: table;
     height: 100%;
