--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,8 @@ body{
 	color:#686868;
 	font-size:14px;
 	font-family: 'Roboto', sans-serif;
-	line-height:1.80857;
-}
+	/** line-height:1.80857; **/
+} 
 
 a {
     color: #1f1f1f;
