--- a/css/style.css
+++ b/css/style.css
@@ -700,7 +700,14 @@ html, body{ height: 100%; }
 	background:url(../images/special_menu_bg.jpg) no-repeat center;
 	background-attachment:fixed;
 	background-size:cover;
-	position:relative;
+/*	position:relative; */
+}
+
+.special-menu1{
+  background:url(../images/special_menu_bg.jpg) no-repeat center;
+  background-attachment:fixed;
+  background-size:cover;
+/*  position:relative; */
 }
 
 .special-menu:before {
@@ -1082,9 +1089,9 @@ html, body{ height: 100%; }
 -------------------------------------------------------------------*/
 
 .gallery-main{
-	
+  background:url(../images/full-bg.png) no-repeat center;
+  background-size:cover;
 }
-
 .gallery-main .title-caption{
 	color: #666;
 }
